--- a/lifeonchain/about/index.html
+++ b/lifeonchain/about/index.html
@@ -64,12 +64,15 @@
 
     <div class="section-wrapper">
         <section class="shape shape-right-left shape-yellow" id="intro_section">
-            <div class="section-container" style="padding: 30px 0;">
+            <div class="section-container" style="padding: 20px 0;">
                 <div class="row mt-4" id="intro_row">
-                    <div class="col-md-6">
+                    <div class="col-md-12 mb-4">
+                        <img src="/img/about-lifeonchain.png" class="img-fluid intro-img"/>
+                    </div>
+                    <div class="col-md-6 mt-4">
                         <img src="/img/lifeonchain-mark.png" class="img-fluid mb-4" />
                     </div>
-                    <div class="col-md-6" style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
+                    <div class="col-md-6 mt-4" style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
                         <div class="container">
                             <p style="text-align: left;">「鏈上生活」為區塊鏈社群所組成的團隊，旨在積極推動「區塊鏈進入生活」的核心理念，強調以「實際體驗」、「有趣好玩」、「生活應用」讓大眾直接認識區塊鏈，並進一步探索區塊鏈對於未來生活的可能性。</p>
                             <p style="text-align: left;">從密碼龐克到區塊鏈，其背後的精神其實都沒有改變：「如何在兼顧隱私與安全之下，建立起一種分散式的信任關係？」區塊鏈進入生活，人與人的協作方式即將產生改變，讓我們一起進入鏈上新世界：</p>
@@ -88,20 +91,24 @@
                             <img src="/img/executive_unit_banner.png" style="max-height: 70px;"/>
                         </div>
                         <div class="col-md-6 mb-4">
-                            <img src="/img/zombit.png" class="img-fluid mb-4">
+                            <img src="/img/zombit-blue.png" class="img-fluid mb-4">
                             <p>桑幣筆記想要打造一個人人都可以輕鬆學習、資訊透明的區塊鏈資訊平台，成為新手最好的橋樑。</p>
                             <p>Zombit 一詞來自殭屍（ Zombie） 與（Bitcoin） 的結合。</p>
                             <p>殭屍與比特幣一樣，在一般大眾眼裏普遍來講都是負面的印象：<br>殭屍：恐怖、腐爛、病毒、瘋狂 ; 比特幣：詐騙、洗錢、泡沫</p>
                             <p>但對我們來說是：<br>殭屍：執著毅力、團結、不眠不休; 比特幣：去中心化、自由、自主權</p>
                         </div>
                         <div class="col-md-6">
-                            <img src="/img/alysida.png" class="img-fluid mb-4">
+                            <img src="/img/alysida-blue.png" class="img-fluid mb-4">
                             <p>ALYSIDA是「鏈」的探索者社群。從技術到法規，社會制度到經濟行為，社群、探索、傳播、實作，去中心化系統帶來的各種新面向都是我們關心的要點。</p>
                             <p>「去中心化」、「鏈」的概念不只是科技的議題，更可能影響組織制度革新，形塑出新的生活型態。因社群而凝聚， ALYSIDA鏈社群自許為探索者、傳道士、與實踐家，矢志成為探索去中心化概念的先鋒；愛因斯坦說過：「想像力比知識更重要」， 讓我們懷抱想像，一同進入「去中心化」的新紀元。</p>
                         </div>
                     </div>
                 </div>
-                <img src="/img/comingsoon.png" class="img-fluid"/>
+                <div class="container" style="padding: 2rem 0;">
+                    <div class="video-container">
+                        <iframe src="https://www.youtube.com/embed/LA_lLRA8AVk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
