--- a/lifeonchain/activity/index.html
+++ b/lifeonchain/activity/index.html
@@ -69,32 +69,37 @@
             <div class="section-container" style="margin-top: -450px;">
                 <div class="container">
                     <div class="row" id="activity_row">
-                    <div class="col-md-6">
-                        <a href="movie/">
-                            <img class="img-fluid" src="/img/movie-block.png"/>
-                        </a>
-                    </div>
+                        <div class="col-md-6">
+                            <a href="movie/">
+                                <img class="img-fluid" src="/img/movie-block.png"/>
+                            </a>
+                        </div>
 
-                    <div class="col-md-6">
-                        <a href="market/">
-                            <img class="img-fluid" src="/img/market-block.png"/>
-                        </a>
-                    </div>
+                        <div class="col-md-6">
+                            <a href="market/">
+                                <img class="img-fluid" src="/img/market-block.png"/>
+                            </a>
+                        </div>
 
-                    <div class="col-md-6">
-                        <a href="lecture/">
-                            <img class="img-fluid" src="/img/lecture-block.png"/>
-                        </a>
-                    </div>
+                        <div class="col-md-6">
+                            <a href="lecture/">
+                                <img class="img-fluid" src="/img/lecture-block.png"/>
+                            </a>
+                        </div>
 
-                    <div class="col-md-6">
-                        <a href="community/">
-                            <img class="img-fluid" src="/img/community-block.png"/>
-                        </a>
+                        <div class="col-md-6">
+                            <a href="community/">
+                                <img class="img-fluid" src="/img/community-block.png"/>
+                            </a>
+                        </div>
+
+                        <div class="col-12" style="margin-top: 3rem;">
+                            <a href="/ticket">
+                                <img class="img-fluid" style="max-width: 300px; width: 100%;" src="/img/signup.png" onmouseover="hover(this);" onmouseout="unhover(this);"/>
+                            </a>
+                        </div>
                     </div>
                 </div>
-                </div>
-                
             </div>
         </section>
 
