--- a/lifeonchain/activity/lecture/index.html
+++ b/lifeonchain/activity/lecture/index.html
@@ -130,33 +130,62 @@
                             </tr>
 
                             <tr>
-                                <td>11:00 - 11:35</td>
-                                <td>Coming soon!</td>
+                                <td>11:00 - 11:30</td>
+                                <td>第一堂 - Coming Soon</td>
+                            </tr>
+
+                            <tr>
+                                <td>11:30 - 11:35</td>
+                                <td>休息時間</td>
                             </tr>
 
                             <tr>
                                 <td>11:35 - 12:05</td>
-                                <td>Coming soon!</td>
+                                <td>第二堂  - Coming Soon</td>
+                            </tr>
+
+                            <tr>
+                                <td>12:05 - 13:00</td>
+                                <td>午餐時段</td>
                             </tr>
 
                             <tr>
                                 <td>13:00 - 14:40</td>
                                 <td>Tokenbacon 百萬大問答</td>
                             </tr>
+
+                            <tr>
+                                <td>14:40 - 15:00</td>
+                                <td>休息時間</td>
+                            </tr>
     
                             <tr>
                                 <td>15:00 - 16:00</td>
-                                <td>讓創作者的靈魂不被操弄！區塊鏈如何保障作家權益？</td>
+                                <td>
+                                    <p>第三堂 - 讓創作者的靈魂不被操弄！區塊鏈如何保障作家權益？</p>
+                                    <p>主持人：<br>賀堅威 - 區塊客 創辦人</p>
+                                    <p>講者：<br>張潔平 - Matters 創辦人<br>高重建 - LikeCoin 創辦人<br>許明恩 - 區塊勢 創辦人</p>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>16:00 - 16:05</td>
+                                <td>休息時間</td>
                             </tr>
 
                             <tr>
                                 <td>16:05 - 16:35</td>
-                                <td>Coming soon!</td>
+                                <td>第四堂 - Coming Soon</td>
+                            </tr>
+
+                            <tr>
+                                <td>16:35 - 16:40</td>
+                                <td>休息時間</td>
                             </tr>
 
                             <tr>
                                 <td>16:40 - 17:10</td>
-                                <td>Coming soon!</td>
+                                <td>第五堂 - Coming Soon</td>
                             </tr>
 
                             <tr>
