--- a/lifeonchain/activity/quiz-competition/index.html
+++ b/lifeonchain/activity/quiz-competition/index.html
@@ -77,8 +77,19 @@
         <section class="shape shape-left-right shape-blue" id="activity_section">
             <div class="section-container">
                 <div class="container">
-                    <p class="mt-4">當區塊鏈進入生活，會呈現什麼樣的樣貌？</p>
-                    <p>到生活市集現場體驗區塊鏈支付方式、各類商販與小遊戲，鏈上生活節更與社群合作，在現場提供問題解惑與區塊鏈應用教學，以最新穎的模式享受美食與逛街體驗。</p>
+                    <p class="mt-4">「想要百萬好禮嗎？想要的就來玩吧！我把所有的財寶都放在鏈上生活節了！」</p>
+                    <p>自認為已經是區塊鏈業界的老手了嗎？<br>覺得自己是根老韭菜，已經不會再被割了嗎？<br>那就來成為區塊鏈知識王，證明自己的能耐吧！</p>
+                    <p>不參加？</p>
+                    <p>你是不知道答案，還是害怕回答？<br>趕緊找尋你的隊友，一起成為區塊鏈知識王，狩獵百萬獎金！</p>
+                    <br>
+                    <p>
+                        <b>總獎金高達百萬顆Token ! </b>
+                        <ul>
+                            <li>MAX 5,000 顆 （市價一萬元）</li>
+                            <li>ACEX 680,000 顆 （市價兩萬元）</li>
+                            <li>各類獎品即將陸續公布!</li>
+                        </ul>
+                    </p>
                 </div>
                 <a href="https://forms.gle/iVi5jzcEXeECMMMi8" target="_blank">
                     <img src="/img/qa-signup.png" class="img-fluid"/>
