--- a/lifeonchain/activity/community/index.html
+++ b/lifeonchain/activity/community/index.html
@@ -84,11 +84,7 @@
                     </div>
 
                     <div class="col-sm-6 col-md-4">
-                        <img class="img-fluid" src="/img/service-center-block.png"/>
-                    </div>
-
-                    <div class="col-sm-6 col-md-4">
-                        <img class="img-fluid" src="/img/defi-block.png"/>
+                        <img class="img-fluid" src="/img/comingsoon-block.png"/>
                     </div>
                 </div>
             </div>
