--- a/lifeonchain/activity/quiz-competition/index.html
+++ b/lifeonchain/activity/quiz-competition/index.html
@@ -74,8 +74,8 @@
         <section style="margin-top: -100px; z-index: 0; width: 100vw; height: 90vh; background-image: url('/img/qa-page.jpg'); background-position: center; background-repeat: no-repeat; background-size: cover;" class="qa-page" id="location_img">
         </section>
     
-        <section class="shape shape-left-right shape-blue" id="activity_section">
-            <div class="section-container">
+        <section class="shape shape-fill-blue" id="activity_section">
+            <div class="section-container" style="padding-top: 2rem;">
                 <div class="container">
                     <p class="mt-4">「想要百萬好禮嗎？想要的就來玩吧！我把所有的財寶都放在鏈上生活節了！」</p>
                     <p>自認為已經是區塊鏈業界的老手了嗎？<br>覺得自己是根老韭菜，已經不會再被割了嗎？<br>那就來成為區塊鏈知識王，證明自己的能耐吧！</p>
@@ -91,7 +91,7 @@
                         </ul>
                     </p>
                 </div>
-                <a href="https://forms.gle/iVi5jzcEXeECMMMi8" target="_blank">
+                <a href="https://forms.gle/wsPWXboMwcg5tzwP9" target="_blank">
                     <img src="/img/qa-signup.png" class="img-fluid"/>
                 </a>
             </div>
@@ -180,7 +180,7 @@
             var width = $(window).width();
             $('#activity_logo_section').css('height', $('#activity_logo_img').height()+70+'px');
             $('#signup_section').css('height', $('#signup_img').height()+parseInt($('#signup_section').css('border-top-width'))+30+'px');
-            $('#activity_section').css('height', $('#activity_section').find('.section-container').height()+parseInt($('#activity_section').css('border-top-width'))+25+'px');
+            $('#activity_section').css('height', $('#activity_section').find('.section-container').height()+parseInt($('#activity_section').css('border-top-width'))+32+'px');
         }
     </script>
 
