--- a/lifeonchain/index.html
+++ b/lifeonchain/index.html
@@ -154,7 +154,7 @@
         <section class="shape shape-right-left shape-yellow" id="lifeonchain_page_section">
             <div class="section-container">
                 <!--<img src="/img/lifeonchain-page.png" class="img-fluid" id="lifeonchain_page_img" />-->
-                <div class="container" style="padding: 2rem 0;">
+                <div class="container" style="padding-top: 2rem; padding-bottom: 2rem; max-width: 840px;">
                     <div class="video-container">
                         <iframe src="https://www.youtube.com/embed/LA_lLRA8AVk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
