--- a/lifeonchain/partner/index.html
+++ b/lifeonchain/partner/index.html
@@ -63,34 +63,127 @@
     </nav>
 
     <div class="section-wrapper">
-        <section class="shape-fill-yellow" style="margin-top: 0px;">
-            <div class="section-container">
-                <div class="container" style="padding: 45px 0 30px;">
-                    <img src="/img/executive_unit.png" class="intro-img img-fluid mb-4"/>
-                    <div class="row justify-content-md-center">
+        <section class="shape shape-fill-yellow" style="margin:0; height: 10vh;"></section>
+
+        <section class="shape-fill-white">
+            <div class="section-container partner-section">
+                <div class="container">
+                    <img src="/img/executive_unit.png" class="intro-img img-fluid mb-4" alt="執行單位"/>
+                    <div class="row justify-content-center justify-content-md-center">
                         <div class="col-6 col-md-3 mb-3">
-                            <img src="/img/zombit.png" class="img-fluid">
+                            <img src="/img/zombit-blue.png" class="img-fluid">
                         </div>
                         <div class="col-6 col-md-3 mb-3">
-                            <img src="/img/alysida.png" class="img-fluid">
+                            <img src="/img/alysida-blue.png" class="img-fluid">
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
 
-        <section class="shape-fill-blue">
-            <div class="section-container">
-                <div class="container" style="padding: 45px 0 30px;">
-                    <img src="/img/coorganizer_unit.png" class="intro-img img-fluid mb-4"/>
+                <div class="container">
+                    <img src="/img/coorganizer_unit.png" class="intro-img img-fluid mb-4" alt="協辦單位"/>
                     <div class="row justify-content-center justify-content-md-center">
                         <div class="col-6 col-md-3 mb-3">
                             <img src="/img/grenade.png" class="img-fluid">
                         </div>
                     </div>
                 </div>
+
+                <div class="container">
+                    <img src="/img/creation-node.png" class="intro-img img-fluid mb-4" alt="創世區塊"/>
+                    <div class="row justify-content-center justify-content-md-center">
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/tokenbacon.png" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <img src="/img/super-node.png" class="intro-img img-fluid mb-4" alt="超級節點"/>
+                    <div class="row justify-content-center justify-content-md-center">
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/ace.png" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/selftoken.png" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <img src="/img/full-node.png" class="intro-img img-fluid mb-4" alt="全節點"/>
+                    <div class="row justify-content-center justify-content-md-center">
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/maicoin.png" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/steaker.png" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <img src="/img/light-node.png" class="intro-img img-fluid mb-4" alt="輕節點"/>
+                    <div class="row justify-content-center justify-content-md-center">
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/matters.png" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/pointtree.png" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/dapppocket.png" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <img src="/img/media-node.png" class="intro-img img-fluid mb-4" alt="媒體節點"/>
+                    <div class="row justify-content-center justify-content-md-center">
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/blocktrend.png" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/abmedia.png" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/blockcast.png" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/abm.png" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <img src="/img/community-node.png" class="intro-img img-fluid mb-4" alt="社群節點"/>
+                    <div class="row justify-content-center justify-content-md-center">
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/litunbeh.png" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/cryptogirls.png" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/gbga.png" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/lootex.png" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/aba.png" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/cryptonote.png" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-md-3 mb-3">
+                            <img src="/img/ian.png" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
+
+        <section class="shape shape-fill-yellow" style="margin:0; height: 10vh;"></section>
     </div>
 
     <footer>
