--- a/lifeonchain/activity/market/index.html
+++ b/lifeonchain/activity/market/index.html
@@ -74,9 +74,9 @@
         <section style="margin-top: -100px; z-index: 0; width: 100vw; height: 90vh; background-image: url('/img/market-page.jpg'); background-position: center; background-repeat: no-repeat; background-size: cover;" id="location_img">
         </section>
     
-        <section class="shape shape-left-right shape-blue" id="activity_section">
+        <section class="shape shape-fill-blue" id="activity_section">
             <div class="section-container">
-                <div class="container">
+                <div class="container" style="padding-top: 2rem;">
                     <p class="mt-4">當區塊鏈進入生活，會呈現什麼樣的樣貌？</p>
                     <p>到生活市集現場體驗區塊鏈支付方式、各類商販與小遊戲，鏈上生活節更與社群合作，在現場提供問題解惑與區塊鏈應用教學，以最新穎的模式享受美食與逛街體驗。</p>
                 </div>
