--- a/lifeonchain/activity/movie/index.html
+++ b/lifeonchain/activity/movie/index.html
@@ -71,30 +71,19 @@
             </div>
         </section>
 
-        <section style="margin-top: -100px; z-index: 0; width: 100vw; height: 90vh; background-image: url('/img/movie-page.jpg'); background-position: center; background-repeat: no-repeat; background-size: cover;" id="location_img">
+        <section class="movie-intro-img" style="margin-top: -100px; z-index: 0; width: 100vw; height: 90vh; background-image: url('/img/movie-page.jpg'); background-position: center; background-repeat: no-repeat; background-size: cover;" id="location_img">
         </section>
     
-        <section class="shape shape-left-right shape-blue" id="activity_section">
+        <section class="shape shape-fill-blue" id="activity_section">
             <div class="section-container">
-                <div class="container">
-                    <iframe src="https://www.youtube.com/embed/M-5mF8-QgXk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width: 100%; height: 50vh;"></iframe>
+                <div class="container" style="padding-top: 2rem;">
+                    <div class="video-container">
+                        <iframe src="https://www.youtube.com/embed/M-5mF8-QgXk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    
                     <p class="mt-4">全世界首部區塊鏈商戰電影「聖人大盜」，全台最大五百人包場就在鏈上生活節大盜影城！</p>
                     <p>本土新銳導演徐嘉凱入圍金馬獎鉅作，集結賴雅妍、曹晏豪、曾之喬、曾志偉領銜主演，以台灣社會為背景，描述年輕創業家投身於區塊鏈技術，與既得利益者周旋的故事。</p>
-                    <p>尹子翔（曹晏豪 飾演）是個懷抱著未來夢想的年輕創業家，嚮往著藉由區塊鏈技術，擺脫舊經濟邏輯，創建新世代的經濟秩序，重建去中心化世界的新金融模式，擺脫財團綁架的金融新世界。他帶著其女友陳曦（曾之喬 飾演）及夥伴一同努力，與睿智冷酷的基金公司總經理徐菁（賴雅妍 飾演）、老謀深算的財團老闆林明衍（曾志偉 飾演）、金管署長陳法同（高英軒 飾演），奮力周旋對抗。</p>
                     <p>面對現實的摧殘、夥伴的背叛，還有一層層更加殘酷的社會寫實真相，尹子翔開始自問：理想與現實的差距，究竟還有多少？想完成夢想，究竟還需要犧牲多少？而自己，究竟是帶給世界美好的聖人；抑或，只是披著羊皮的狼人大盜？究竟，無名小卒的他們，能否從金字塔頂端的人們手中拿回世界的自主權呢？</p>
-
-                    <br>
-                    <p class="mt-4">SELFER Card 是一款結合 ARG (Alternate Reality Game) 元素的「區塊鏈角色卡牌遊戲」，以電影《聖人大盜》的世界觀作為基礎，在我們所處的現實世界延伸出超展開的 SELFER World，打造全然的「沉浸式娛樂」體驗；目前第一代卡牌總計有十款角色，並隨機分配為「聖人」與「大盜」兩個陣營。</p>
-                    <div class="row">
-                        <div class="col-md-6 mt-2" style="display: flex; align-items: center;">
-                            <img src="/img/self-card.jpg" class="img-fluid"/>
-                        </div>
-
-                        <div class="col-md-6 mt-2" style="display: flex; align-items: center;">
-                            <img src="/img/giphy.gif" class="img-fluid"/>
-                        </div>
-                    </div>
-                    <p class="mt-2">如果想要拿到卡片的朋友，趕快來鏈上生活節2019 詢問啦！！</p>
                 </div>
             </div>
         </section>
